--- a/apps/compras/templates/compras/lista_solicitudes.html
+++ b/apps/compras/templates/compras/lista_solicitudes.html
@@ -176,7 +176,7 @@ Solicitudes de Compra
 
                 <div class="panel-heading">
                   <h3 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#acordion" href="#collapse{{solicitud.id}}">
+                    <a data-toggle="collapse" data-parent="#acordion" href="#collapses{{solicitud.id}}">
                       Solucitud #{{solicitud.id}}
                     </a>
                     {% include 'compras/estados_solicitud.html' %}
@@ -186,7 +186,7 @@ Solicitudes de Compra
 
                 </div>
 
-                <div id="collapse{{solicitud.id}}" class="panel-collapse collapse">
+                <div id="collapses{{solicitud.id}}" class="panel-collapse collapse">
                   <div class="form-group row">
                     <div class="col-xs-6">
                       <label for="inputNombre">Nombre Solicitante</label>
