--- a/apps/compras/templates/compras/listar_cotizaciones.html
+++ b/apps/compras/templates/compras/listar_cotizaciones.html
@@ -60,7 +60,7 @@ Solicitud de Compra #{{solicitud.id}}
 
                           <span> Total: ${% widthratio cotizacion.total 1 cotizacion.solicitud.cantidad|intcomma %}</span>
 
-                          {% if cantidad >= 3 %}
+                          {% if cantidad >= 3 and not orden %}
                           <a style="display: inline" href="{% url 'compras:orden_crear' cotizacion.id %}" class="btn btn-primary">Seleccionar para orden de compra</a>
                           {% endif %}
 
