Validacion de solicitudes segun jefe inmediato

--- a/apps/compras/templates/compras/crear_ordenes.html
+++ b/apps/compras/templates/compras/crear_ordenes.html
@@ -19,7 +19,7 @@ Generar Orden de Compra
 {% endblock titulo %}
 
 {% block contenido %}
-<div class="content-wrapper">
+<div class="content-wrapper" style="margin-left: 0 !important">
   <!-- Main content -->
   <section class="box">
     <div class="col-md-12">
