--- a/apps/compras/templates/compras/crear_solicitudes.html
+++ b/apps/compras/templates/compras/crear_solicitudes.html
@@ -32,7 +32,7 @@ Generar Solicitud de Compra
 {% endblock titulo_pagina %}
 
 {% block contenido %}
-<div class="content-wrapper">
+<div class="content-wrapper" style="margin-left: 0 !important">
   <!-- Main content -->
   <section class="box">
     <div class="col-md-12">
