--- a/apps/compras/templates/compras/lista_solicitudes.html
+++ b/apps/compras/templates/compras/lista_solicitudes.html
@@ -36,7 +36,7 @@ Solicitudes de Compra
 
 
 {% block contenido %}
-<div class="content-wrapper">
+<div class="content-wrapper" style="margin-left:0 !important">
   <!-- Main content -->
   <section class="box">
     {% if usuario.cargo.name != 'gerente' %}
