--- a/apps/compras/templates/compras/listar_cotizaciones.html
+++ b/apps/compras/templates/compras/listar_cotizaciones.html
@@ -17,7 +17,7 @@ Solicitud de Compra #{{solicitud.id}}
 
 
 {% block contenido %}
-<div class="content-wrapper">
+<div class="content-wrapper" style="margin-left:0 !important">
   <!-- Main content -->
   <section class="box">
     <div class="col-md-12">
