valor se guarda en orden de servicio desde datos maestros

--- a/apps/ordenes_servicio/templates/ordenes_servicio/consultar_orden_servicio.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/consultar_orden_servicio.html
@@ -30,6 +30,7 @@
                     <th>Estado</th>
                     <th>Cliente</th>
                     <th>Servicio</th>
+                    <th>Valor</th>
                     <th>Encargado</th>
                     <th>Comentarios</th>
                     <th>Cambiar Estado a</th>
@@ -52,6 +53,7 @@
                     </td>
                     <td>{{ orden.cliente }}</td>
                     <td>{{ orden.servicio_vendido }}</td>
+                    <td>{{ orden.valor }}</td>
                     <td>{{ orden.encargado }}</td>
                     <td>{{ orden.comentarios }}</td>
                     <td>
