--- a/apps/ordenes_servicio/templates/ordenes_servicio/base.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/base.html
@@ -54,7 +54,7 @@
         </nav>
     </header>
 
-    {% include "ordenes_servicio/sidebar.html" %}
+    {% include 'menu.html' %}
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
