envío de correos al aprobar o rechazar orden/solicitud de compra

--- a/apps/compras/templates/compras/send.html
+++ b/apps/compras/templates/compras/send.html
@@ -1,17 +1,27 @@
-:<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Contización </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <title>Cotización </title>
+
 </head>
 <body>
-    <h4 ></h4>
-    <h3>pdf creado!</h3>
 
-    <h2>{{cotizacion.total}}</h2>
+
+    <br><br><br> 
+        <h1 align= "right" id= "date">time {{test}} </h1>
+    <br><br><br><br>
+
+    <h2>JavaScript in Body</h2>
+
+    <p id="demo">demo</p>
+
+
+    
+    </body>
+    
+    </html> 
+   
+
+    <!-- <h2>{{cotizacion.total}}</h2> -->
 </body>
 </html>
