ajuste nombre cargo

--- a/apps/compras/templates/compras/lista_solicitudes.html
+++ b/apps/compras/templates/compras/lista_solicitudes.html
@@ -65,7 +65,7 @@ Solicitudes de Compra
     </div>
     {% endif %}
 
-    {% if usuario.cargo.name != "empleado" %}
+    {% if usuario.cargo.name != "operario" %}
 
     <div class="col-md-12">
       <!-- general form elements -->
