--- a/templates/cuentas/email_content.html
+++ b/templates/cuentas/email_content.html
@@ -1,17 +1,7 @@
-<h1 style="font-size: 1.5em; line-height: 2em;">Cuenta de Cobro.</h1>
-
-<p>Cuenta de Cobro</p>
-
-<dl>
-  <dt>Servicio:</dt>
-  <dd>{{ servicio }}</dd>
-
-  <dt>Tarifa:</dt>
-  <dd>{{ tarifa }}</dd>
-
-  <dt>Costo:</dt>
-  <dd>{{ costo }}</dd>
-
-  <dt>Fecha:</dt>
-  <dd>{{ fecha_vencimiento }}</dd>
-</dl>
+<ul class="list-group">
+  <li class="list-group-item active" style="font-size: 1.5em; line-height: 2em;" >Cuenta de Cobro.</li>
+  <li class="list-group-item">Servicio...........{{ servicio }}</li>
+  <li class="list-group-item">Tarifa.............{{ tarifa }}</li>
+  <li class="list-group-item">Costo..............{{ costo }}</li>
+  <li class="list-group-item">Fecha Vencimiento..{{ fecha_vencimiento }}</li>
+</ul>
