--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="/inventario/" class="logo">
+        <a href="/" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini">E<b>R</b>P</span>
             <!-- logo for regular state and mobile devices -->
