--- a/apps/inventario/templates/entradasRegistradas.html
+++ b/apps/inventario/templates/entradasRegistradas.html
@@ -56,8 +56,8 @@ h4 {
 
           <tr role="row" class="even">
               <td class="sorting_1 text-center" tabindex="0">{{ orden.id }}</td>
-              <td class="sorting_1 text-center" tabindex="0">{{ orden.solicitud.articulo }}</td>
-              <td class="sorting_1 text-center" tabindex="0">{{ orden.solicitud.cantidad }}</td>
+              <td class="sorting_1 text-center" tabindex="0">{{ orden.cotizacion.solicitud.articulo }}</td>
+              <td class="sorting_1 text-center" tabindex="0">{{ orden.cotizacion.solicitud.cantidad }}</td>
               <td class="sorting_1 text-center" tabindex="0">{{ orden.cotizacion.proveedor }}</td>
               <td class="sorting_1 text-center" tabindex="0">{{ orden.cotizacion.total }}</td>
               <td class="sorting_1 text-center" tabindex="0">{{ orden.fecha_esperada }}</td>
