Crear entrada fix

--- a/apps/inventario/templates/registrarEntrada.html
+++ b/apps/inventario/templates/registrarEntrada.html
@@ -36,9 +36,9 @@
                   <th>Tiempo</th>
                 </tr>
                 <tr>
-                  <td>{{ orden.solicitud.articulo }}</td>
+                  <td>{{ orden.cotizacion.solicitud.articulo }}</td>
                   <td>{{ orden.cotizacion.total }}</td>
-                  <td>{{ orden.solicitud.cantidad }}</td>
+                  <td>{{ orden.cotizacion.solicitud.cantidad }}</td>
                   <td>{{ orden.cotizacion.proveedor }}</td>
                   <td>{{ orden.fecha_esperada }}</td>
                 </tr>
