--- a/templates/menus/menu_cuentas.html
+++ b/templates/menus/menu_cuentas.html
@@ -8,9 +8,10 @@
           </span>
     </a>
     <ul class="treeview-menu">
-        {% if perms.cuentas.add_cuentaspagar %}<li><a href="{% url 'crearCuenta'%}">Crear Cuenta Pagar</a></li>{% endif %}
+        <li><a href="{% url 'index'%}">Inicio</a></li>
+        {% if perms.cuentas.add_cuentapagar %}<li><a href="{% url 'crearCuenta'%}">Crear Cuenta Pagar</a></li>{% endif %}
         {% if perms.cuentas.view_cuentaspagar %}<li><a href="{% url 'listarPagar'%}">Cuentas por Pagar</a></li>{% endif %}
-        {% if perms.cuentas.add_payments %}<li><a href="{% url 'payments'%}">Pagos</a></li>{% endif %}
+        {% if perms.cuentas.add_payment %}<li><a href="{% url 'payments'%}">Pagos</a></li>{% endif %}
         {% if perms.cuentas.view_cuentascobrar %}<li><a href="{% url 'listarCobrar'%}">Cuentas de Cobro</a></li>{% endif %}
         {% if perms.cuentas.view_cuentasempresa %}<li><a href="{% url 'listarCuentaEmpresa'%}">Cuentas Bancarias</a></li>{% endif %}
         <!--<li><a href="{% url 'createOrder'%}">Crear Ordenes</a></li>-->
